# esp-bluepuck-mov

./: .gitignore  README.md
Ela docs/: NFC Reader.txt  P&G ELA custom ble settings.xlsm  Website.txt
src/: CMakeLists.txt  sdkconfig.defaults
src/main/: CMakeLists.txt  main.c
src/main/bluepuck_mov/: bluepuck_mov.c  bluepuck_mov.h
src/main/include/: common.h  console_log.h
src/main/include/lightyear_bluetooth/: lightyear_bluetooth_client.c  lightyear_bluetooth_client.h  lightyear_bluetooth_shared.h
